# Image-Grid-Viewer

./: .gitignore  README.md  Requirement.MD  build_exe.ps1  build_onedir.ps1  pyinstaller_runtime_env.py  pyproject.toml
app/: __init__.py
app/core/: grid.py  image_region.py  tiled_image.py
app/models/: __init__.py  state.py
app/ui/: image_canvas.py  main_window.py  tiled_image_canvas.py  zoom_panel.py
